Added more queries, changed YAML format

--- a/querying/queries_test.yml
+++ b/querying/queries_test.yml
@@ -4,89 +4,287 @@ categories:
         queries:
             - artists:
                 name: 'Artists'
-                query: 'search http 200 | regex url="^(/ws/\d)?/artist/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | head 2000 | top mbid'
+                query: 'search http 200 | head 100000 | regex url="^(/ws/\d)?/artist/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | top 50 mbid'
                 history: true
                 daily: true
+                graphing:
+                    display: 10
+                    mapping:
+                        xaxis: '#'
+                        yaxis: 'count'
+                        type: 'bar'
             - release_groups:
                 name: 'Release-groups'
-                query: 'search http 200 | regex url="^(/ws/\d)?/release-group/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | head 2000 | top mbid'
+                query: 'search http 200 | head 100000 | regex url="^(/ws/\d)?/release-group/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | top 50 mbid'
                 history: true
                 daily: true
             - releases:
                 name: 'Releases'
-                query: 'search http 200 | regex url="^(/ws/\d)?/release/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | head 2000 | top mbid'
+                query: 'search http 200 | head 100000 | regex url="^(/ws/\d)?/release/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | top 50 mbid'
                 history: true
                 daily: true
             - recordings:
                 name: 'Recordings'
-                query: 'search http 200 | regex url="^(/ws/\d)?/(recording|track)/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | head 2000 | top mbid'
+                query: 'search http 200 | head 100000 | regex url="^(/ws/\d)?/(recording|track)/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | top 50 mbid'
                 history: true
                 daily: true
             - works:
                 name: 'Works'
-                query: 'search http 200 | regex url="^(/ws/\d)?/work/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | head 100 | top mbid'
+                query: 'search http 200 | head 100000 | regex url="^(/ws/\d)?/work/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | top 50 mbid'
                 history: true
                 daily: true
             - labels:
                 name: 'Labels'
-                query: 'search http 200 | regex url="^(/ws/\d)?/label/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | head 10 | top mbid' 
+                query: 'search http 200 | head 100000 | regex url="^(/ws/\d)?/label/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}" | top 50 mbid' 
                 history: true
                 daily: true
-    - view_count:
-        name: 'View count'
+    - top_inc_params_ws_1:
+        name: 'Top inc parameters (ws/1)'
         queries:
-            - about:
-                name: 'About'
-                query: 'search http 200 | head 2000 | regex url="^/doc/About" | stats count AS "About"'
+            - sum:
+                name: 'Summary'
+                query: 'search http 200 | head 100000 | regex url="^/ws/1/" | top 50 inc'
                 history: false
                 daily: true
-            - sponsors:
-                name: 'Sponsors'
-                query: 'search http 200 | head 2000 | regex url="^/doc/About/Sponsors" | stats count AS "Sponsors"'
+            - ws_1_artist:
+                name: 'Artists'
+                query: 'search http 200 | head 100000 |regex url="^/ws/1/artist/" | top 50 inc'
                 history: false
                 daily: true
-            - team:
-                name: 'Team'
-                query: 'search http 200 | head 2000 | regex url="^/doc/About/Team" | stats count AS "Team"'
+            - ws_1_release_group:
+                name: 'Release-groups'
+                query: 'search http 200 | head 100000 |regex url="^/ws/1/release-group/" | top 50 inc'
                 history: false
                 daily: true
-            - data_license:
-                name: 'Data License'
-                query: 'search http 200 | head 2000 | regex url="^/doc/About/Data_License" | stats count AS "Data License"'
+            - ws_1_release:
+                name: 'Releases'
+                query: 'search http 200 | head 100000 |regex url="^/ws/1/release/" | top 50 inc'
                 history: false
                 daily: true
-            - social_contract:
-                name: 'Social Contract'
-                query: 'search http 200 | head 2000 | regex url="^/doc/Social_Contract" | stats count AS "Social Contract"'
+            - ws_1_track:
+                name: 'Tracks'
+                query: 'search http 200 | head 100000 |regex url="^/ws/1/track/" | top 50 inc'
                 history: false
                 daily: true
-            - code_of_conduct:
-                name: 'Code of Conduct'
-                query: 'search http 200 | head 2000 | regex url="^/doc/Code_of_Conduct" | stats count AS "Code of Conduct"'
+            - ws_1_label:
+                name: 'Labels'
+                query: 'search http 200 | head 100000 |regex url="^/ws/1/label/" | top 50 inc'
                 history: false
                 daily: true
-            - privacy_policy:
-                name: 'Privacy Policy'
-                query: 'search http 200 | head 2000 | regex url="^/doc/About/Privacy_Policy" | stats count AS "Privacy Policy"'
+    - top_inc_params_ws_2:
+        name: 'Top inc parameters (ws/2)'
+        queries:
+            - sum:
+                name: 'Summary'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/" | top 50 inc'
                 history: false
                 daily: true
-            - auto_editor:
-                name: 'Auto-editor Elections'
-                query: 'search http 200 | head 2000 | regex ="^/elections" | stats count AS "Auto-editor Elections"'
+            - ws_2_artist:
+                name: 'Artists'
+                query: 'search http 200 | head 100000 |regex url="^/ws/2/artist/" | top 50 inc'
                 history: false
                 daily: true
-            - privileged_accounts:
-                name: 'Privileged User Accounts'
-                query: 'search http 200 | head 2000 | regex url="^/privileged" | stats count AS "Privileged User Accounts"'
+            - ws_2_release_group:
+                name: 'Release-groups'
+                query: 'search http 200 | head 100000 |regex url="^/ws/2/release-group/" | top 50 inc'
                 history: false
                 daily: true
-            - statistics:
-                name: 'Statistics'
-                query: 'search http 200 | head 2000 | regex url="^/statistics" | stats count AS "Statistics"'
+            - ws_2_release:
+                name: 'Releases'
+                query: 'search http 200 | head 100000 |regex url="^/ws/2/release/" | top 50 inc'
                 history: false
                 daily: true
-            - timeline:
-                name: 'Timeline Graph'
-                query: 'search http 200 | head 2000 | regex url="^/statistics/timeline" | stats count AS "Timeline Graph"'
+            - ws_2_recording:
+                name: 'Recordings'
+                query: 'search http 200 | head 100000 |regex url="^/ws/2/recording/" | top 50 inc'
                 history: false
                 daily: true
+            - ws_2_work:
+                name: 'Works'
+                query: 'search http 200 | head 100000 |regex url="^/ws/2/work/" | top 50 inc'
+                history: false
+                daily: true
+            - ws_2_label:
+                name: 'Labels'
+                query: 'search http 200 | head 100000 |regex url="^/ws/2/label/" | top 50 inc'
+                history: false
+                daily: true
+    - entities_searched_ws_1:
+        name: 'Entities being searched (ws/1)'
+        queries:
+            - artist:
+                name: 'Artists'
+                query: 'search http 200 | head 100000 | regex url="^/ws/1/artist/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - release_group:
+                name: 'Release-groups'
+                query: 'search http 200 | head 100000 | regex url="^/ws/1/release-group/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - release:
+                name: 'Releases'
+                query: 'search http 200 | head 100000 | regex url="^/ws/1/release/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - track:
+                name: 'Tracks'
+                query: 'search http 200 | head 100000 | regex url="^/ws/1/track/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - label:
+                name: 'Labels'
+                query: 'search http 200 | head 100000 | regex url="^/ws/1/label/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+    - entities_searched_ws_2:
+        name: 'Entities being searched (ws/2)'
+        queries:
+            - artist:
+                name: 'Artists'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/artist/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - release_group:
+                name: 'Release-groups'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/release-group/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - release:
+                name: 'Releases'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/release/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - recording:
+                name: 'Recordings'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/recording/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - work:
+                name: 'Works'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/work/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+            - label:
+                name: 'Labels'
+                query: 'search http 200 | head 100000 | regex url="^/ws/2/label/" | regex query=".*" | stats count'
+                history: false
+                daily: true
+#    - view_count:
+#        name: 'View count'
+#        queries:
+#            - about:
+#                name: 'About'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/About" | stats count AS "About"'
+#                history: false
+#                daily: true
+#            - sponsors:
+#                name: 'Sponsors'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/About/Sponsors" | stats count AS "Sponsors"'
+#                history: false
+#                daily: true
+#            - team:
+#                name: 'Team'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/About/Team" | stats count AS "Team"'
+#                history: false
+#                daily: true
+#            - data_license:
+#                name: 'Data License'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/About/Data_License" | stats count AS "Data License"'
+#                history: false
+#                daily: true
+#            - social_contract:
+#                name: 'Social Contract'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/Social_Contract" | stats count AS "Social Contract"'
+#                history: false
+#                daily: true
+#            - code_of_conduct:
+#                name: 'Code of Conduct'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/Code_of_Conduct" | stats count AS "Code of Conduct"'
+#                history: false
+#                daily: true
+#            - privacy_policy:
+#                name: 'Privacy Policy'
+#                query: 'search http 200 | head 100000 | regex url="^/doc/About/Privacy_Policy" | stats count AS "Privacy Policy"'
+#                history: false
+#                daily: true
+#            - auto_editor:
+#                name: 'Auto-editor Elections'
+#                query: 'search http 200 | head 100000 | regex ="^/elections" | stats count AS "Auto-editor Elections"'
+#                history: false
+#                daily: true
+#            - privileged_accounts:
+#                name: 'Privileged User Accounts'
+#                query: 'search http 200 | head 100000 | regex url="^/privileged" | stats count AS "Privileged User Accounts"'
+#                history: false
+#                daily: true
+#            - statistics:
+#                name: 'Statistics'
+#                query: 'search http 200 | head 100000 | regex url="^/statistics" | stats count AS "Statistics"'
+#                history: false
+#                daily: true
+#            - timeline:
+#                name: 'Timeline Graph'
+#                query: 'search http 200 | head 100000 | regex url="^/statistics/timeline" | stats count AS "Timeline Graph"'
+#                history: false
+#                daily: true
+    - view_count_test:
+        name: 'View count (test)'
+        queries:
+            - about_menu:
+                name: 'About menu'
+                query: 'search http 200 | head 100000 | regex url="^/doc/About" | stats count | eval name="About" | fields name, count 
+                        | append [search http 200 | head 100000 | regex url="^/doc/About/Sponsors" | stats count | eval name="Sponsors" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/doc/About/Team" | stats count | eval name="Team" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/doc/About/Data_License" | stats count | eval name="Data License" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/doc/Social_Contract" | stats count | eval name="Social Contract" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/doc/Code_of_Conduct" | stats count | eval name="Code of Conduct" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/doc/About/Privacy_Policy" | stats count | eval name="Privacy Policy" | fields name, count]
+                        | append [search http 200 | head 100000 | regex ="^/elections" | stats count | eval name="Auto-editor Elections" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/privileged" | stats count | eval name="Privileged User Accounts" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/statistics" | stats count | eval name="Statistics" | fields name, count]
+                        | append [search http 200 | head 100000 | regex url="^/statistics/timeline" | stats count | eval name="Timeline Graph" | fields name, count]'
+                history: false
+                daily: true
+                graphing:
+                    display: 11
+                    mapping:
+                        xaxis: '#'
+                        yaxis: 'count'
+                        type: 'bar'
+            - products_menu:
+                name: 'Product menu'
+                query: 'search http 200 | head 50000 | regex url="^/doc/Products" | stats count | eval name="Products" | fields name, count 
+                        | append [search http 200 | head 50000 | regex url="^/doc/MusicBrainz_Picard" | stats count | eval name="MusicBrainz Picard" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/Jaikoz" | stats count | eval name="Jaikoz tagger" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/Magic_MP3_Tagger" | stats count | eval name="Magic MP3 Tagger" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/MusicBrainz_for_Android" | stats count | eval name="MusicBrainz for Android" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/MusicBrainz_Server" | stats count | eval name="MusicBrainz Server" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/MusicBrainz_Database" | stats count | eval name="Musicbrainz Database" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/Developer_Resources" | stats count | eval name="Developer Resources" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/XML_Web_Service" | stats count | eval name="XML Web Service" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/Live_Data_Feed" | stats count | eval name="Live Data Feed" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/doc/FreeDB_Gateway" | stats count | eval name="FreeDB Gateway" | fields name, count]'
+                history: false
+                daily: true
+                graphing:
+                    display: 11
+                    mapping:
+                        xaxis: '#'
+                        yaxis: 'count'
+                        type: 'bar'
+            - search_menu:
+                name: 'Search menu'
+                query: 'search http 200 | head 50000 | regex url="^/search" | stats count | eval name="Search" | fields name, count 
+                        | append [search http 200 | head 50000 | regex url="^/search/edits" | stats count | eval name="Search Edits" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/browse" | stats count | eval name="Browse" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/tags" | stats count | eval name="Tags" | fields name, count]
+                        | append [search http 200 | head 50000 | regex url="^/cdstub/browse" | stats count | eval name="Top CD Stubs" | fields name, count]'
+                history: false
+                daily: true
+                graphing:
+                    display: 5
+                    mapping:
+                        xaxis: '#'
+                        yaxis: 'count'
+                        type: 'bar'
